[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/Interact/Piano.gd" type="Script" id=1]
[ext_resource path="res://GFX/Piso.png" type="Texture" id=2]
[ext_resource path="res://SFX/Melodia_do_Piano.ogg" type="AudioStream" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 118.457, 73.935 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 144.801, 99.6808 )

[node name="Piano" type="StaticBody2D"]
collision_layer = 2
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0.247059, 0.247059, 0.247059, 1 )
position = Vector2( 95.4706, 53.0183 )
scale = Vector2( 3.98346, 2.65682 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 96.9955, 52.0902 )
shape = SubResource( 1 )

[node name="Detect" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detect"]
position = Vector2( 94.6006, 53.2877 )
shape = SubResource( 2 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -5.0

[node name="SpawnPhoto" type="Position2D" parent="."]

[connection signal="body_entered" from="Detect" to="." method="_on_Detect_body_entered"]
[connection signal="body_exited" from="Detect" to="." method="_on_Detect_body_exited"]
[connection signal="finished" from="AudioStreamPlayer" to="." method="_on_AudioStreamPlayer_finished"]
